istio/istio-gate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backsite-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
