istio/istio-vs-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backsite-vs
spec:
  hosts:
  - "*"
  gateways:
  - backsite-gateway
  http:
    - route:
      - destination:
          host: backsite-svc
          subset: v1
        weight: 90
      - destination:
          host: backsite-svc
          subset: v2
        weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backsite-dr
spec:
  host: backsite-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
